2011-12-29 Lefteris Zafiris <zaf.000@gmail.com> - 0.1
	Initial release 0.1